# home_task_seemplicity

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: ci.yml
docs/: DEVELOPER.md  PRD.md
src/api/: dependencies.py  main.py
src/api/repositories/: task_repo.py
src/api/routers/: metrics.py  tasks.py
src/api/schemas/: task.py
src/api/services/: task_service.py
src/shared/: cache.py  config.py  database.py  logging.py  metrics.py
src/shared/models/: task.py
src/worker/: celery_app.py
src/worker/tasks/: __init__.py  base.py  hash_task.py  llm_task.py  sum_task.py
tests/: conftest.py
tests/api/: test_tasks.py
tests/worker/: test_tasks.py
